{
  "version": 4,
  "terraform_version": "0.12.19",
  "serial": 55,
  "lineage": "4982ca15-cfe1-87bd-60f6-8b0a28f77962",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:226618999994:vpc/vpc-78cfc611",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-e822d180",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-34f8ee5d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-78cfc611",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-fc475e95",
            "owner_id": "226618999994",
            "state": "available"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:226618999994:security-group/sg-0aeb77760501d1354",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0aeb77760501d1354",
            "ingress": [],
            "name": "arcane-1",
            "name_prefix": null,
            "owner_id": "226618999994",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-78cfc611"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_db_access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 3306,
            "id": "sgrule-110802547",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0aeb77760501d1354",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.db_instance"
          ]
        }
      ]
    }
  ]
}